<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context="com.bikcrum.logindemo.MainActivity">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:met_floatingLabel="normal"
        app:met_floatingLabelText="@string/name"
        app:met_singleLineEllipsis="true" />


    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:met_floatingLabel="normal"
        app:met_floatingLabelText="@string/email"
        app:met_singleLineEllipsis="true" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_number"
        app:met_floatingLabel="normal"
        app:met_floatingLabelText="@string/contact_number"
        app:met_singleLineEllipsis="true" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:met_floatingLabel="normal"
        app:met_floatingLabelText="@string/password"
        app:met_singleLineEllipsis="true" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        app:met_floatingLabel="normal"
        app:met_floatingLabelText="@string/confirm_password"
        app:met_singleLineEllipsis="true" />

    <com.dd.processbutton.iml.ActionProcessButton
        android:id="@+id/sign_in_btn"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:pb_colorNormal="@color/colorPrimaryDark"
        app:pb_colorPressed="@color/colorPrimary"
        app:pb_colorComplete="@color/colorAccent"
        app:pb_colorProgress="@color/colorAccentDark"
        app:pb_colorError="@color/colorRed"
        android:textColor="@color/colorWhite"
        app:pb_cornerRadius="5dp"
        android:text="@string/register"/>

</LinearLayout>
